<resources>
    <string name="app_name">Todo</string>
    <string name="title_activity_main">To Do List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="activity_main_header_text">
        <u>Work Things to Complete </u>
    </string>
    <string name="label_progress">Progress</string>
    <string name="text_place_holder_title">Title</string>
    <string name="text_placeholder_description">Description</string>
    <string name="place_holder_progress_value">0%</string>
    <string name="text_done">Done</string>
    <string name="text_todo_title">TODO</string>
    <string name="hint_add_a_new_item_title">Add a new item</string>
    <string name="hint_add_a_new_item_desc">Enter item description here</string>
    <string name="label_btn_add">Add</string>
    <string name="action_all_todo_items">All To do items</string>
    <string name="action_completed_todo_items">Completed Items</string>
    <string name="message_new_item_added">New todo item added</string>
    <string name="message_item_deleted">"Todo Item deleted "</string>
    <string name="message_item_updated">"Todo Item updated "</string>
    <string name="action_description_delete_todo_item">Delete todo item button</string>
</resources>
