<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_marginBottom="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todo_item_title"
                android:text="@string/text_place_holder_title"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todo_item_description"
                android:text="@string/text_placeholder_description"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todo_item_check_box"/>
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_delete"
                android:layout_below="@id/todo_item_check_box"
                android:scaleType="centerCrop"
                android:id="@+id/todo_item_delete_button"
                android:contentDescription="@string/action_description_delete_todo_item"
                android:cropToPadding="true"
                android:background="@android:color/transparent" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
